# mrcp

mrcp_g4/: AM-standing-Co60p.outbak  CMakeLists.txt  G4History.macro  MRCP.cc  example.in  example.out  example_Param.out  init_vis.mac  source.mac  sourceGPS.mac  vis.mac
mrcp_g4/include/: ActionInitialization.hh  DetectorConstruction.hh  MRCPDoseCalculation.hh  MRCPModel.hh  MRCPPSDoseDeposit.hh  MRCPProtQCalculator.hh  MRCPRun.hh  PhysicsList.hh  PrimarySamplingHelper.hh  Primary_GPS.hh  Primary_ParticleGun.hh  Run.hh  RunAction.hh  TETModel.hh  TETModelStore.hh  TETPSBoneDose_byDRF.hh  TETPSEnergyDeposit.hh  TETParameterisation.hh  TETSteppingAction.hh
mrcp_g4/macro/: npschk_SI_Ir192.mac  npschk_SQ_Co60.mac  simulTime.txt  src_SI_Co60.mac  src_SI_Ir192.mac  src_SQ_Co60.mac  src_SQ_Ir192.mac  src_ST_Co60.mac  src_ST_Ir192.mac
mrcp_g4/nuclides/: Ba-137m.RAD  Co-60.RAD  Co60_p  Cs-137.RAD  Cs137_p  Ir-192.RAD  Ir192_p
mrcp_g4/output/: AM-standing-Co60p.in  example.in  xPos.mac
mrcp_g4/src/: ActionInitialization.cc  DetectorConstruction.cc  MRCPDoseCalculation.cc  MRCPModel.cc  MRCPPSDoseDeposit.cc  MRCPProtQCalculator.cc  MRCPRun.cc  PhysicsList.cc  PrimarySamplingHelper.cc  Primary_GPS.cc  Primary_ParticleGun.cc  Run.cc  RunAction.cc  TETModel.cc  TETModelStore.cc  TETPSBoneDose_byDRF.cc  TETPSEnergyDeposit.cc  TETParameterisation.cc  TETSteppingAction.cc
phantoms/: AF_MRCP_skin.node  AM_MRCP_skin.node  ICRP-AF.RBMnBS  ICRP-AF.material  ICRP-AM.RBMnBS  ICRP-AM.material  ICRP116.DRF
